--- a/teamservice/src/main/resources/application.properties
+++ b/teamservice/src/main/resources/application.properties
@@ -1,1 +1,4 @@
 server.port=8081
+server.contextPath=/team-service
+spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+management.endpoints.web.exposure.include=*
